@@ -82,7 +82,9 @@ void cyg_user_start(void)
 void cyg_user_start(void)
 {
     int ret;
+#ifdef CYGHWR_IO_FLASH_DEVICE_LEGACY
     char data[1024];
+#endif
     void *flash_start, *flash_end;
     int block_size, blocks;
     char *prog_start;
@@ -138,7 +140,7 @@ void cyg_user_start(void)
     CYG_TEST_PASS_FAIL((ret == 0),"flash program overrun check");
 
     /* Program over a block boundary */
-    prog_start = (unsigned char *)flash_start + block_size - sizeof(copyright)/2;
+    prog_start = (char *)flash_start + block_size - sizeof(copyright)/2;
     ret = flash_program(prog_start,&copyright,sizeof(copyright),NULL);
     CYG_TEST_PASS_FAIL((ret == FLASH_ERR_OK),"flash_program2");
   
